# gateway-service

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  release.yml  rpi-image.yml
rpi-image/: README.md  hubble-gateway.rpi-imager-manifest
rpi-image/bdebstrap/: customize90-hubble
rpi-image/config/: hubble-gateway.yaml
rpi-image/layer/: hubble-gateway.yaml
rpi-image/layer/hubble-gateway.rootfs-overlay/boot/firmware/: hubble-gateway.conf.example
rpi-image/layer/hubble-gateway.rootfs-overlay/etc/systemd/system/: hubble-gateway.service  hubble-provision.service
rpi-image/layer/hubble-gateway.rootfs-overlay/usr/local/sbin/: hubble-provision
scripts/: install.sh
src/hubble_gateway/: __init__.py  auth.py  cli.py  config.py  daemon.py  location.py  models.py  scanner.py  sender.py  ubx.py
src/hubble_gateway_service/: __init__.py  cli.py  daemon.py
