[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubble-gateway"
version = "0.1.0"
description = "Open-source BLE gateway SDK for Hubble Network"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Hubble Network", email = "dev@hubblenetwork.com" }]
keywords = ["ble", "bluetooth", "gateway", "iot", "hubble"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "bleak>=0.21.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
gps = ["pyserial-asyncio>=0.6", "gpsd-py3>=0.3.0"]
all = ["hubble-gateway[gps]"]
dev = ["hubble-gateway[all]", "pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.scripts]
hubble-gateway = "hubble_gateway.cli:main"

[project.urls]
Homepage = "https://github.com/HubbleNetwork/gateway-sdk-python"
Documentation = "https://github.com/HubbleNetwork/gateway-sdk-python#readme"
Repository = "https://github.com/HubbleNetwork/gateway-sdk-python"
Issues = "https://github.com/HubbleNetwork/gateway-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hubble_gateway"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
