[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hubble-gateway-service"
version = "0.1.0"
description = "Ready-to-run BLE gateway daemon for Hubble Network, powered by the hubble-gateway SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Hubble Network", email = "dev@hubblenetwork.com" }]
keywords = ["ble", "bluetooth", "gateway", "iot", "hubble", "daemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
]
dependencies = [
    "hubble-gateway[gps]>=0.1.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.scripts]
hubble-gateway = "hubble_gateway_service.cli:main"

[project.urls]
Homepage = "https://github.com/HubbleNetwork/gateway-service"
Documentation = "https://github.com/HubbleNetwork/gateway-service#readme"
Repository = "https://github.com/HubbleNetwork/gateway-service"
SDK = "https://github.com/HubbleNetwork/gateway-sdk-python"
Issues = "https://github.com/HubbleNetwork/gateway-service/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hubble_gateway_service"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
